Fix: Bugs in iOS devices, general spacing (mobile) (sec-5, sec-4) (3)

--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,6 @@ body {
 }
 
 .carousel-3d-fotos {
-  margin: 2rem auto;
   min-height: 200px;
   overflow: hidden;
   /* CORTA O VAZAMENTO PARA A DIREITA */
